fix bug 33542, wallet functions don't work on first usage of browser, r=neeti